tests/fail/int_only_ident.rs
concat_idents::concat_idents!(fn_name = 1 {
    fn fn_name() {
        /* an ident cannot be made of just an integer */
    }
});

fn main() {}
